Add aliases for old urls

--- a/content/posts/2017-12-09-rtl8723be-fix.md
+++ b/content/posts/2017-12-09-rtl8723be-fix.md
@@ -2,6 +2,8 @@
 date: "2017-12-09T00:00:00Z"
 published: true
 subtitle: Fix low/no signal for WiFi and Bluetooth
+aliases:
+    - /2017-12-09-rtl8723be-fix/
 title: Fixing rtl8723be Wifi and Bluetooth issues in Linux
 ---
 
